Update README w/ more specifications

--- a/README.Rmd
+++ b/README.Rmd
@@ -71,8 +71,6 @@ mysql -u username -h your_server_ip -p
 
 * Now install `odbc` in your Ubuntu server. I follow [this](I followed this: https://askubuntu.com/questions/800216/installing-ubuntu-16-04-lts-how-to-install-odbc)
 
-Note: you might need to change the url's and directories to a **newer** version of `odbc` so don't simply copy and paste the links from below.
-
 ```{bash, eval = FALSE}
 sudo mkdir mysql && cd mysql
 
@@ -84,6 +82,8 @@ sudo tar -xvf mysql-connector-odbc-5.3.9-linux-ubuntu16.04-x86-64bit.tar.gz
 sudo cp mysql/mysql-connector-odbc-5.3.9-linux-ubuntu16.04-x86-64bit/lib/libmyodbc5a.so /usr/lib/x86_64-linux-gnu/odbc/
 # If the odbc folder doesn't exists, create it with mkdir /usr/lib/x86_64-linux-gnu/odbc/
 ```
+
+Note: you might need to change the url's and directories to a **newer** version of `odbc` so don't simply copy and paste the links from below.
 
 * Create and update the `odbc` settings.
 
@@ -124,7 +124,7 @@ Socket                = /var/run/mysqld/mysqld.sock
 
 # Finally, run
 
-ln -s /var/run/mysqld/mysqld.sock /tmp/mysql.sock
+sudo ln -s /var/run/mysqld/mysqld.sock /tmp/mysql.sock
 
 # to move the socket to the folder where the DBI pkgs
 # search for it
@@ -135,8 +135,6 @@ sudo service mysql restart;
 
 # to restart mysql server
 ```
-
-That did it for me. Now I could connect to the database from R from my local computer and from the server itself. Remember to change some of the arguments from below.
 
 ## Connecting to the database locally and remotely
 
@@ -161,14 +159,16 @@ From R in the server
 ```{r, eval = FALSE}
 con <- dbConnect(RMySQL::MySQL(),
                  dbname = "bicing",
-                 user = username,
-                 password = password,
+                 user = username, # remember to change to your username (in quotes)
+                 password = password, # remember to change to your password (in quotes)
                  port = 3306)
 
 dbListTables(con)
 
 bike_stations <- dbReadTable(con, "bicing_station")
 ```
+
+That did it for me. Now I could connect to the database from R from my local computer and from the server itself.
 
 ## Scraping automatically
 
