Correctly tests that scripts can write to db

--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,7 @@ output:
     html_preview: false
 ---
 
-This guide is OUTDATED. New guide coming soon.
+This guide is OUTDATE. New guide coming soon.
 
 ## Setting up the data base
 
